# cursed_taskmanager

./: CMakeLists.txt  README.md
cursed_taskmanager_dll/: CMakeLists.txt  Dllmain.cpp  Zalgo.cpp  Zalgo.h
cursed_taskmanager_installer/: CMakeLists.txt  Main.cpp
